--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-05 19:15:58,119\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import os\n",
@@ -23,6 +31,30 @@
     "from sklearn.model_selection import train_test_split\n",
     "from torch.utils.data import Dataset, Subset\n",
     "from torchvision.transforms import ToTensor, Compose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, True, False, True]\n",
+      "[155  50]\n",
+      "[1 3 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = np.array([1, 3, 155, 7, 50])\n",
+    "idx = [True, True, False, True, False]\n",
+    "idx2 = [not b for b in idx]\n",
+    "print(idx2)\n",
+    "print(t[idx2])\n",
+    "print(t[idx])"
    ]
   },
   {
