Add autocast, .pth autocleaner. Make results visuals of existing methods and experiments for recap.

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-05 19:15:58,119\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2024-04-11 09:20:21,349\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -55,52 +55,6 @@
     "print(idx2)\n",
     "print(t[idx2])\n",
     "print(t[idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import time\n",
-    "\n",
-    "def write_to_csv(data, filename='data.csv'):\n",
-    "    # Convert the dictionary to a DataFrame\n",
-    "    df = pd.DataFrame(data, index=[0])  # Assuming you want to create a new DataFrame with a single row\n",
-    "\n",
-    "    # Write the DataFrame to a CSV file\n",
-    "    df.to_csv(filename, index=False)\n",
-    "\n",
-    "# Function to update the CSV file with new data\n",
-    "def update_csv(new_data, filename='data.csv'):\n",
-    "    # Convert the new data dictionary to a DataFrame\n",
-    "    new_df = pd.DataFrame(new_data, index=[0])  # Assuming you want to create a new DataFrame with a single row\n",
-    "\n",
-    "    # Append the new DataFrame to the existing CSV file without headers\n",
-    "    new_df.to_csv(filename, mode='a', index=False, header=False)\n",
-    "\n",
-    "# Example data as dictionaries\n",
-    "data_dict1 = {\n",
-    "    'Key1': 10,\n",
-    "    'Key2': 20,\n",
-    "    'Key3': 30\n",
-    "}\n",
-    "\n",
-    "data_dict2 = {\n",
-    "    'Key1': 40,\n",
-    "    'Key2': 50,\n",
-    "    'Key3': 69\n",
-    "}\n",
-    "\n",
-    "# Write the first set of data to the CSV file\n",
-    "# write_to_csv(data_dict1)\n",
-    "# tail -f data .csv\n",
-    "# Update the CSV file with the second set of data\n",
-    "for i in range(5):\n",
-    "    update_csv(data_dict2)\n",
-    "    time.sleep(2)\n"
    ]
   },
   {
@@ -2589,7 +2543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
