--- a/visual.ipynb
+++ b/visual.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-09 19:41:30,474\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2024-04-23 11:22:53,174\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -402,56 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n",
-      "['outputs\\\\2024-03-17\\\\17-39-36\\\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\11-28-39\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\17-49-17\\\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-21\\\\20-38-45\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-25\\\\11-39-51\\\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-26\\\\19-59-01\\\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-30\\\\17-05-31\\\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv', 'outputs\\\\2024-03-30\\\\23-40-23\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-07\\\\15-27-50\\\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-08\\\\11-45-34\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-05\\\\21-50-30\\\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\11-33-29\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\21-12-08\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv']\n",
-      "outputs\\2024-03-17\\17-39-36\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(100.0,80), Val-(87.73550448210344,77), Test-(89.84126732235863,80)\n",
-      "outputs\\2024-03-18\\11-28-39\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(82.83659680121768,97), Val-(32.317423248291014,10), Test-(33.13491975693476,0)\n",
-      "outputs\\2024-03-18\\17-49-17\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(100.0,77), Val-(88.2703930963327,80), Test-(88.92856899443127,81)\n",
-      "outputs\\2024-03-21\\20-38-45\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(87.87916292130828,98), Val-(30.78636616371898,3), Test-(30.65664556962025,1)\n",
-      "outputs\\2024-03-25\\11-39-51\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(100.0,39), Val-(90.9375,90), Test-(90.9018987341772,74)\n",
-      "outputs\\2024-03-26\\19-59-01\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(100.0,34), Val-(90.625,49), Test-(90.98101265822784,31)\n",
-      "outputs\\2024-03-30\\17-05-31\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(99.5050905115464,96), Val-(89.6875,32), Test-(89.79430379746836,62)\n",
-      "outputs\\2024-03-30\\23-40-23\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(97.54123774609604,102), Val-(90.99726006366843,66), Test-(88.48892405063292,68)\n",
-      "outputs\\2024-04-07\\15-27-50\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(99.66063966634036,138), Val-(87.00050187625125,53), Test-(87.9746835443038,76)\n",
-      "outputs\\2024-04-08\\11-45-34\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(95.86748918109188,71), Val-(79.63244120582073,60), Test-(75.31645569620254,26)\n",
-      "outputs\\2024-04-05\\21-50-30\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
-      "Corrupted .csv with missing data\n",
-      "outputs\\2024-04-06\\11-33-29\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(90.70256852082588,47), Val-(78.26252207638856,21), Test-(72.78481012658227,22)\n",
-      "outputs\\2024-04-06\\21-12-08\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv\n",
-      "Best accuracies on (accuracy,round):  \n",
-      "Train-(95.0937270684828,81), Val-(80.03937175078873,29), Test-(77.37341772151899,28)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_summary(exp_file_csv: str):\n",
     "    \"\"\"Plot and print summary of a expirement\"\"\"\n",
@@ -506,15 +459,88 @@
     "        # plt.show()\n",
     "        plt.close()\n",
     "    except:\n",
-    "        print(\"Corrupted .csv with missing data\")\n",
-    "\n",
+    "        print(\"Corrupted .csv with missing data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "['outputs\\\\2024-03-17\\\\17-39-36\\\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\11-28-39\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\17-49-17\\\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-21\\\\20-38-45\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-25\\\\11-39-51\\\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-26\\\\19-59-01\\\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-30\\\\17-05-31\\\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv', 'outputs\\\\2024-03-30\\\\23-40-23\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-07\\\\15-27-50\\\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-08\\\\11-45-34\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-22\\\\11-50-53\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-05\\\\21-50-30\\\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\11-33-29\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\21-12-08\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# C:\\Users\\smpoulio_local\\Desktop\\PythonProjects\\FlowerYtTut\\outputs\\2024-04-22\\11-50-53\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv\n",
     "exp_files: list[str] = []\n",
     "for R in [100, 150, 200]:\n",
     "    for B in [24, 32]:\n",
     "        exp_files.extend(glob.glob(f\"outputs/*/*/*B={B}*R={R}*csv\"))\n",
     "\n",
     "print(len(exp_files))\n",
-    "print(exp_files)\n",
+    "print(exp_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs\\2024-03-17\\17-39-36\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(100.0,80), Val-(87.73550448210344,77), Test-(89.84126732235863,80)\n",
+      "outputs\\2024-03-18\\11-28-39\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(82.83659680121768,97), Val-(32.317423248291014,10), Test-(33.13491975693476,0)\n",
+      "outputs\\2024-03-18\\17-49-17\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(100.0,77), Val-(88.2703930963327,80), Test-(88.92856899443127,81)\n",
+      "outputs\\2024-03-21\\20-38-45\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(87.87916292130828,98), Val-(30.78636616371898,3), Test-(30.65664556962025,1)\n",
+      "outputs\\2024-03-25\\11-39-51\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(100.0,39), Val-(90.9375,90), Test-(90.9018987341772,74)\n",
+      "outputs\\2024-03-26\\19-59-01\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(100.0,34), Val-(90.625,49), Test-(90.98101265822784,31)\n",
+      "outputs\\2024-03-30\\17-05-31\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(99.5050905115464,96), Val-(89.6875,32), Test-(89.79430379746836,62)\n",
+      "outputs\\2024-03-30\\23-40-23\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(97.54123774609604,102), Val-(90.99726006366843,66), Test-(88.48892405063292,68)\n",
+      "outputs\\2024-04-07\\15-27-50\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(99.66063966634036,138), Val-(87.00050187625125,53), Test-(87.9746835443038,76)\n",
+      "outputs\\2024-04-08\\11-45-34\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(95.86748918109188,71), Val-(79.63244120582073,60), Test-(75.31645569620254,26)\n",
+      "outputs\\2024-04-22\\11-50-53\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(99.4463648358177,149), Val-(77.70088470639612,149), Test-(80.34018987341773,149)\n",
+      "outputs\\2024-04-05\\21-50-30\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
+      "Corrupted .csv with missing data\n",
+      "outputs\\2024-04-06\\11-33-29\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(90.70256852082588,47), Val-(78.26252207638856,21), Test-(72.78481012658227,22)\n",
+      "outputs\\2024-04-06\\21-12-08\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(95.0937270684828,81), Val-(80.03937175078873,29), Test-(77.37341772151899,28)\n"
+     ]
+    }
+   ],
+   "source": [
     "for i in range(len(exp_files)):\n",
     "    plot_summary(exp_file_csv=exp_files[i])"
    ]
