Dataset visuals for augmentations. SimSiam related files.

--- a/visual.ipynb
+++ b/visual.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-23 11:22:53,174\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2024-04-29 20:37:28,194\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -464,15 +464,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n",
-      "['outputs\\\\2024-03-17\\\\17-39-36\\\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\11-28-39\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\17-49-17\\\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-21\\\\20-38-45\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-25\\\\11-39-51\\\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-26\\\\19-59-01\\\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-30\\\\17-05-31\\\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv', 'outputs\\\\2024-03-30\\\\23-40-23\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-07\\\\15-27-50\\\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-08\\\\11-45-34\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-22\\\\11-50-53\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-05\\\\21-50-30\\\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\11-33-29\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\21-12-08\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv']\n"
+      "17\n",
+      "['outputs\\\\2024-03-17\\\\17-39-36\\\\fedavg_momentum_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\11-28-39\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-18\\\\17-49-17\\\\fedavg_proximal_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=24_E=1_R=100.csv', 'outputs\\\\2024-03-21\\\\20-38-45\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-25\\\\11-39-51\\\\fedavg_momentum_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-26\\\\19-59-01\\\\fedavg_proximal_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100.csv', 'outputs\\\\2024-03-30\\\\17-05-31\\\\scaffold_scaffold_iid_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=100_amp.csv', 'outputs\\\\2024-03-30\\\\23-40-23\\\\scaffold_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-07\\\\15-27-50\\\\scaffold_scaffold_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-08\\\\11-45-34\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-22\\\\11-50-53\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction1_B=32_E=1_R=150.csv', 'outputs\\\\2024-04-05\\\\21-50-30\\\\scaffoldv2_scaffold_dirichlet_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\11-33-29\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-06\\\\21-12-08\\\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv', 'outputs\\\\2024-04-26\\\\18-10-00\\\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-27\\\\19-36-12\\\\fedavg_momentum_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv', 'outputs\\\\2024-04-28\\\\13-08-53\\\\fedavg_proximal_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv']\n"
      ]
     }
    ],
@@ -536,11 +536,21 @@
       "Train-(90.70256852082588,47), Val-(78.26252207638856,21), Test-(72.78481012658227,22)\n",
       "outputs\\2024-04-06\\21-12-08\\scaffoldv2_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200_no_amp.csv\n",
       "Best accuracies on (accuracy,round):  \n",
-      "Train-(95.0937270684828,81), Val-(80.03937175078873,29), Test-(77.37341772151899,28)\n"
+      "Train-(95.0937270684828,81), Val-(80.03937175078873,29), Test-(77.37341772151899,28)\n",
+      "outputs\\2024-04-26\\18-10-00\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(89.57873967152807,10), Val-(77.74236196869403,37), Test-(75.83069620253164,37)\n",
+      "outputs\\2024-04-27\\19-36-12\\fedavg_momentum_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(94.40896474257698,190), Val-(61.0888119727643,187), Test-(57.31803797468354,187)\n",
+      "outputs\\2024-04-28\\13-08-53\\fedavg_proximal_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
+      "Best accuracies on (accuracy,round):  \n",
+      "Train-(99.69106824752504,192), Val-(75.84125200063569,181), Test-(74.84177215189874,194)\n"
      ]
     }
    ],
    "source": [
+    "# outputs\\2024-04-26\\18-10-00\\scaffold_scaffold_dirichlet_alpha0.1_balanced_Classes=10_Seed=2024_C=10_fraction0.5_B=32_E=1_R=200.csv\n",
     "for i in range(len(exp_files)):\n",
     "    plot_summary(exp_file_csv=exp_files[i])"
    ]
