--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-11 09:20:21,349\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "c:\\Users\\smpoulio_local\\miniconda3\\envs\\pyt_flwr\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-05-05 13:05:24,338\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -35,31 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, False, True, False, True]\n",
-      "[155  50]\n",
-      "[1 3 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = np.array([1, 3, 155, 7, 50])\n",
-    "idx = [True, True, False, True, False]\n",
-    "idx2 = [not b for b in idx]\n",
-    "print(idx2)\n",
-    "print(t[idx2])\n",
-    "print(t[idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2543,7 +2521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
