Pretrain centralised SimSiam functions - Save checkpoint - knnMonitor match custom subset targets

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512\n",
+      "512\n",
+      "Sequential(\n",
+      "  (0): ResNet(\n",
+      "    (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+      "    (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (relu): ReLU(inplace=True)\n",
+      "    (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+      "    (layer1): Sequential(\n",
+      "      (0): BasicBlock(\n",
+      "        (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "      (1): BasicBlock(\n",
+      "        (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (layer2): Sequential(\n",
+      "      (0): BasicBlock(\n",
+      "        (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (downsample): Sequential(\n",
+      "          (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (1): BasicBlock(\n",
+      "        (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (layer3): Sequential(\n",
+      "      (0): BasicBlock(\n",
+      "        (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (downsample): Sequential(\n",
+      "          (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (1): BasicBlock(\n",
+      "        (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (layer4): Sequential(\n",
+      "      (0): BasicBlock(\n",
+      "        (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (downsample): Sequential(\n",
+      "          (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (1): BasicBlock(\n",
+      "        (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (relu): ReLU(inplace=True)\n",
+      "        (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "        (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+      "    (fc): Identity()\n",
+      "  )\n",
+      "  (1): ProjectionMLP(\n",
+      "    (l1): Sequential(\n",
+      "      (0): Linear(in_features=512, out_features=2048, bias=True)\n",
+      "      (1): BatchNorm1d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU(inplace=True)\n",
+      "    )\n",
+      "    (l3): Sequential(\n",
+      "      (0): Linear(in_features=2048, out_features=2048, bias=True)\n",
+      "      (1): BatchNorm1d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "  )\n",
+      ")\n",
+      "2048\n",
+      "torch.Size([64, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from model import ResNet18, PredictionMLP, ProjectionMLP, SimSiam\n",
+    "import torchvision.transforms.functional as F\n",
+    "net = ResNet18(num_classes)\n",
+    "# print(net)\n",
+    "# print(net.resnet)\n",
+    "print(net.resnet.fc.in_features)\n",
+    "print(net.resnet.layer4[-1].conv2.out_channels) #.conv3.out_channels)\n",
+    "\n",
+    "model = SimSiam(backbone=net.resnet, hidden_dim=2048, pred_dim=512, output_dim=2048)\n",
+    "# backbone.fc = ProjectionMLP(backbone.layer4[-1].conv2.out_channels, hidden_dim, hidden_dim, hidden_dim) \n",
+    "#         self.encoder = backbone\n",
+    "# print(model)\n",
+    "print(model.encoder)\n",
+    "print(model.encoder[1].l3[0].out_features) #.out_features)\n",
+    "\n",
+    "inp = torch.randn(64, 3, 256, 256)\n",
+    "feature = model.encoder[0](inp)\n",
+    "print(feature.size())\n",
+    "# print(F.normalize(feature, dim=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +227,7 @@
       "    Root location: D:/Datasets/data\n",
       "    split=train\n",
       "    StandardTransform\n",
-      "Transform: <dataset.TwoCropsTransform object at 0x000002C81C7874F0>\n"
+      "Transform: <dataset.TwoCropsTransform object at 0x00000296B2D2F730>\n"
      ]
     }
    ],
@@ -121,24 +256,42 @@
     "        memory_indices = (torch.tensor(memoryset._labels)[..., None] == classes).any(-1).nonzero(as_tuple=True)[0]\n",
     "        np_memory_idx = np.array(memory_indices)\n",
     "        memory_sub = CustomSubset(memoryset, np_memory_idx)\n",
-    "    #     return train_sub, test_sub\n",
-    "    # else:\n",
-    "    #     return trainset, testset\n",
+    "else:\n",
+    "    raise ValueError('subset')\n",
     "\n",
     "print(type(train_sub))\n",
-    "print(train_sub.dataset)"
+    "print(train_sub.dataset)\n",
+    "trainset = train_sub\n",
+    "testset = test_sub\n",
+    "memoryset = memory_sub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5250  5251  5252 ... 62997 62998 62999]\n",
+      "[ 5250  5251  5252 ... 62997 62998 62999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trainset.indices)\n",
+    "print(memoryset.indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "trainset = train_sub\n",
-    "testset = test_sub\n",
-    "memoryset = memory_sub\n",
     "train_loader = DataLoader(Subset(trainset.dataset, trainset.indices), batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
     "test_loader = DataLoader(Subset(testset.dataset, testset.indices), batch_size=batch_size, num_workers=num_workers)\n",
     "memory_loader = DataLoader(Subset(memoryset.dataset, memoryset.indices), batch_size=batch_size, num_workers=num_workers)"
@@ -146,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +321,43 @@
     "for (X, _) in train_loader:\n",
     "    print(X[0].size(), X[1].size())\n",
     "    break "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[4 4 4 ... 9 9 9]\n",
+      "7500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(memory_loader.dataset.indices)\n",
+    "# # print(memory_loader.dataset.labels)\n",
+    "# print(len(memory_loader.dataset.indices))\n",
+    "# print(memory_loader.dataset)\n",
+    "# print(memory_loader.dataset.dataset._labels)\n",
+    "# print(len(memory_loader.dataset.dataset._labels))\n",
+    "\n",
+    "\n",
+    "# print(classes)\n",
+    "# print(tr_mapped_lab)\n",
+    "# print(len(tr_mapped_lab))\n",
+    "# print(len(memory_loader.dataset))\n",
+    "\n",
+    "\n",
+    "targets = np.array(memory_loader.dataset.dataset._labels)[memory_loader.dataset.indices] \n",
+    "classes = len(np.unique(targets))\n",
+    "print(classes)\n",
+    "print(targets)\n",
+    "print(len(targets))"
    ]
   },
   {
