--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Notebook for SSFL mostly\n",
     "import glob\n",
     "import os\n",
     "from typing import List, Tuple, Optional, Dict\n",
@@ -31,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "datapath = 'D:/Datasets/data' #'D:/DesktopC/Datasets/data/' \n",
     "subset = True #True\n",
     "num_classes = 10\n",
-    "num_workers = 1\n",
-    "batch_size=64\n",
+    "num_workers = 2\n",
+    "batch_size=32\n",
     "seed=2024\n",
     "num_partitions = 10\n",
     "alpha = 0.5\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,15 +70,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64\n",
-      "<torch.utils.data.dataset.Subset object at 0x00000169E3BD2DA0>\n"
+      "tensor(0.1880) <class 'torch.Tensor'>\n",
+      "0.18800000846385956\n",
+      "[1, 3, 128, 'xdd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "loss = torch.tensor(0.172)\n",
+    "cka = 0.5 * 0.032\n",
+    "total_loss = loss + cka\n",
+    "print(total_loss, type(total_loss))\n",
+    "print(float(total_loss))\n",
+    "\n",
+    "list1 = [1, 3, 128]\n",
+    "a = 'xdd'\n",
+    "list2 = list1 + [a]\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "<torch.utils.data.dataset.Subset object at 0x000002414CE32CE0>\n"
      ]
     }
    ],
@@ -92,26 +122,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([64, 2048]) cuda:0\n",
-      "torch.Size([64, 2048]) cuda:0\n",
-      "torch.Size([22, 2048]) cuda:0\n"
+      "[1, 4, 7, 9]\n",
+      "8\n",
+      "3\n",
+      "(40, 50)\n",
+      "(40, 50)\n",
+      "(150, 2048)\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 4, 7, 9, 8]\n",
+    "print(list1[:-1])\n",
+    "print(list1[-1])\n",
+    "obj1 = np.random.randn(40,50)\n",
+    "obj3 = np.random.randn(40,50)\n",
+    "obj2 = np.random.rand(150,2048)\n",
+    "list_obj = []\n",
+    "list_obj.append(obj1)\n",
+    "list_obj.append(obj3)\n",
+    "list_obj.append(obj2)\n",
+    "obj4 = None\n",
+    "# list_obj.append(obj4)\n",
+    "# print(list_obj[-1])\n",
+    "print(len(list_obj))\n",
+    "for obj in list_obj:\n",
+    "    print(obj.shape)\n",
+    "\n",
+    "list_obj.append(obj4)\n",
+    "# list_obj.extend(obj4) # error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "Total: 157, Backbone: 120, Encoder: 134, Predictor: 9\n",
+      "120\n",
+      "2048\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(radloader.dataset))\n",
+    "len_params = len(model.state_dict())\n",
+    "# print(f\"Total: {len_params}, Backbone: {len(model.backbone.state_dict())}, Encoder: {len(model.encoder.state_dict())}, Predictor: {len(model.predictor.state_dict())}\")\n",
+    "print(f\"Total: {len_params}, Backbone: {len(model.encoder[0].state_dict())}, Encoder: {len(model.encoder.state_dict())}, Predictor: {len(model.predictor.state_dict())}\")\n",
+    "print(len(model.encoder[0].state_dict()))\n",
+    "# print(model.encoder[0])\n",
+    "print(model.encoder[1].l3[0].out_features)\n",
+    "# len(model.backbone)\n",
+    "# len(model.encoder)\n",
+    "# len(model.predictor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'progress2'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu =0.5\n",
+    "# print(len(memoryloader.dataset))\n",
+    "# len(radloader.dataset)\n",
+    "state = False\n",
+    "for i in range(10):\n",
+    "    if i == 10-1:\n",
+    "        print(i)\n",
+    "    # b = 20 + 5\n",
+    "#     if state:\n",
+    "#         b = 30\n",
+    "string1 = 'progress'\n",
+    "print(string1 + '2')\n",
+    "# print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 2048]) cpu\n",
+      "torch.Size([32, 2048]) cpu\n",
+      "torch.Size([32, 2048]) cpu\n",
+      "torch.Size([32, 2048]) cpu\n",
+      "torch.Size([22, 2048]) cpu\n",
+      "tensor([-0.5867, -0.8563,  1.7407,  ...,  0.4323,  0.2128,  0.4134])\n",
+      "tensor([ 0.1234,  0.5639, -1.1866,  ...,  0.8113, -2.0471,  0.3632])\n"
      ]
     }
    ],
    "source": [
     "embds = []\n",
     "with torch.no_grad():\n",
-    "    torch.manual_seed(seed)\n",
+    "    model.to('cpu')\n",
     "    for idx, (X_img , _) in enumerate(radloader):\n",
     "        # images = data[0] # images[0]\n",
-    "        embedding = model.encoder(X_img.cuda(non_blocking=True)) # +1000MB sthn gpu\n",
+    "        # model.to('cpu')\n",
+    "        embedding = model.encoder(X_img) #.cuda(non_blocking=True)) # +1000MB sthn gpu\n",
     "        print(embedding.size(), embedding.device)\n",
     "        embds.append(embedding)\n",
     "        # if idx == 2:\n",
@@ -121,8 +264,11 @@
     "        # 4.8 me simple_trf dataset, 5.6 sec me one crop augmentation trf\n",
     "    # K2 = torch.cat(embds, dim=0)\n",
     "    K = torch.cat(embds, dim=0)\n",
-    "    linear_CKA_fast()\n",
-    "    \n"
+    "    # linear_CKA_fast()\n",
+    "\n",
+    "print(embedding[0])\n",
+    "print(embedding[1])\n",
+    "model = model.to('cuda') \n"
    ]
   },
   {
