Auto cast compression forwards&losses comporession to get bs=128. Functioning metrics pipeline, tboard logging with more losses and matlib plotting. Debug and test on .ipynb.

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,9 @@
     "subset = True #True\n",
     "num_classes = 10\n",
     "num_workers = 2\n",
-    "batch_size=32\n",
+    "batch_size=128\n",
     "seed=2024\n",
-    "num_partitions = 10\n",
+    "num_partitions = 5\n",
     "alpha = 0.5\n",
     "partitioning = 'dirichlet' \n",
     "balance=True\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +66,56 @@
    "source": [
     "trainloaders, validationloaders, testloader, memoryloader, radloader = load_dataset_SSL(datapath, subset, num_classes, num_workers, \n",
     "                                                               num_partitions, batch_size, partitioning, alpha, balance, seed, rad_ratio=0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126.24309931000074"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7574.585958600044 / 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1225\n",
+      "Client's population of samples: [1225, 1523, 1077, 2072, 1603]\n",
+      "MODULO so get samples that are being left in the end of dataloader: [73, 115, 53, 24, 67]\n",
+      "Loader Iterations [10, 12, 9, 17, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(trainloaders[0].dataset))\n",
+    "divisor = 128 #batch_size\n",
+    "\n",
+    "lengths = [len(loader.dataset) for loader in trainloaders]\n",
+    "print(f\"Client's population of samples: {lengths}\")\n",
+    "print(f\"MODULO so get samples that are being left in the end of dataloader: {[len(loader.dataset) % divisor for loader in trainloaders]}\") \n",
+    "#[57, 8, 25, 50, 21, 50, 35, 32, 1, 53] o 9os client bgazei error me batch_size=64 kai dropparei  . #gia clients=5 k bs=128: [73, 115, 53, 24, 67]\n",
+    "loader_iterations = [len(loader) for loader in trainloaders]\n",
+    "print(f\"Loader Iterations {loader_iterations}\") # an zygos p.x. 14iters tote mporw x2 batchsize = 128\n",
+    "# if images.size(1) == 1:\n",
+    "#         continue  # Skip samples with channel size of 1"
    ]
   },
   {
@@ -191,25 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "9\n",
+      "progress2\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'progress2'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
