--- a/visual.ipynb
+++ b/visual.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-29 20:37:28,194\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
@@ -27,6 +19,38 @@
     "from flwr.common import Metrics\n",
     "from omegaconf import DictConfig\n",
     "# outputs\\2024-02-08\\18-07-46\\fedavg_varEpoch_False_seed_2024.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_0.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_1.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_2.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_3.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_4.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_5.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_6.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_7.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_8.csv', 'outputs/2024-05-14/15-55-45/clients\\\\client_fit_progress_9.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# files_name = glob.glob()\n",
+    "exp_files: list[str] = []\n",
+    "exp_files = glob.glob(f\"outputs/2024-05-14/15-55-45/clients/*csv\") \n",
+    "# for R in [100, 150, 200]:\n",
+    "#     for B in [24, 32]:\n",
+    "#         exp_files.extend(glob.glob(f\"outputs/*/*/*B={B}*R={R}*csv\"))\n",
+    "\n",
+    "# print(len(exp_files))\n",
+    "print(exp_files)\n",
+    "total_fit_mins = 0\n",
+    "for f in exp_files:\n",
+    "    df = pd.read_csv(f)\n",
+    "    fit_mins_column = df[\"fit_mins\"]\n",
+    "    total_fit_mins += sum(fit_mins_column)\n",
+    "\n",
+    "print(total_fit_mins)"
    ]
   },
   {
